# psmc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  core_experiments.ipynb  mhs_vs_psmcfa_500mb.ipynb
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
experiment/: README.md  Supplementary_Note_1_Reproducibility.md  run.py
experiment/assets/ui/: README.md
experiment/notebooks/: all_plots_precomputed.ipynb  core_experiments.ipynb  figure4_figure5_only.ipynb  main_text_6items.ipynb  mhs_vs_psmcfa_vcf_500mb.ipynb  real_data_rust_vs_c.ipynb  supplementary_S1_S5.ipynb  supplementary_S4_S5.ipynb
experiment/real_data/: Papuan_highlands_diploid.psmcfa
experiment/scripts/: README.md  run_supplementary.py  simulate_msprime_to_psmcfa.py
experiments/core/: accuracy_summary.csv  batchsize_robustness.csv  bootstrap_curve_table.csv  performance_summary.csv
experiments/core/outputs/: bottleneck.rust.html  constant.c.psmc  constant.rust.bs100000.html  constant.rust.bs100000.json  constant.rust.bs1000000.html  constant.rust.bs1000000.json  constant.rust.bs300000.html  constant.rust.full.html  constant.rust.full.json  constant.rust.html  constant.rust.json  expansion.rust.html  zigzag.c.psmc  zigzag.rust.bootstrap_main.html  zigzag.rust.bs100000.html  (+8 more)
scripts/: simulate_msprime_to_mhs.py  simulate_msprime_to_psmcfa.py
src/: bootstrap.rs  hmm.rs  lib.rs  model.rs  opt.rs  progress.rs  report.rs  utils.rs
src/io/: mhs.rs  mod.rs  params.rs  psmcfa.rs  vcf.rs
tests/: cli_smoke.rs  hmm_estep.rs  io_mhs.rs  io_psmcfa.rs  io_vcf.rs  model_invariants.rs  params_io.rs
(+77 files in other folders)
