[package]
name = "psmc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argmin = "0.10"
bstr = "1.11"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
faer = "0.19"
indicatif = "0.17"
memchr = "2.7"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
